# cmdai

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CICD_SETUP_COMPLETE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  SETUP.md  VERSIONING.md  cmdai.cmd  cmdai.ps1  cmdai_learning.json.backup.20260214211225  pyproject.toml
.github/workflows/: ci.yml  release.yml
archive/: CmdAi.sln  RELEASE_QUICKSTART.md
archive/docs/: ARCHITECTURE.md
cmdai/: .env.example  .gitignore  LICENSE  OLLAMA_SETUP.md  README.md  cli.py  cmdai_learning.json  env_file.py  fallbacks.py  llm.py  models.py  resolver.py  storage.py  tool_hints.py
cmdai/data/: hints.json
cmdai_next/: README.md  cmdai-next.cmd  cmdai-next.ps1  pyproject.toml
cmdai_next/cmdai_next/: catalog.py  cli.py  collector.py  llm.py  resolver.py  storage.py  supplements.py
cmdai_next/cmdai_next/data/: hints.json  supplements.json
cmdai_next/tests/: test_env_file.py  test_fallbacks.py  test_llm.py  test_resolver.py  test_storage.py  test_tool_hints.py
docs/: ARCHITECTURE.md  CICD.md  CONTRIBUTING.md  INSTALL.md  SETUP.md  VERSIONING.md
scripts/: build-dev.ps1  build-dev.sh  publish-nuget.sh  version-bump.ps1  version-bump.sh
src/CmdAi.Cli/: CmdAi.Cli.csproj  Program.cs  appsettings.json
tests/: test_cli.py  test_env_file.py  test_llm.py  test_resolver.py  test_storage.py  test_tool_hints.py
tests/CmdAi.Tests/: AIConfigurationTests.cs  AIProviderPromptHelperTests.cs  CmdAi.Tests.csproj  FileMemoryServiceTests.cs  MemoryQueryGeneratorTests.cs  MultiProviderAICommandResolverTests.cs  (+1 more)
(+55 files in other folders)
