[project]
name = "cmdai-next"
version = "0.1.0"
description = "Documentation-grounded command-line assistant prototype"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
cmdai-next = "cmdai_next.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

